# algolab

./: .gitignore
code/: CMakeLists.txt
code/0_basic_data_types/src/: main.cpp
code/0_bfs/src/: main.cpp
code/0_dfs/src/: main.cpp
code/0_hello_world/src/: main.cpp
code/0_maps/src/: main.cpp
code/0_sets/src/: main.cpp
code/0_sort/src/: main.cpp
code/0_strings/src/: main.cpp
code/0_sum_it/src/: main.cpp
code/0_vectors/src/: main.cpp
code/10_asterix_and_the_chariot_race/src/: main.cpp
code/10_asterix_in_switzerland/public/: test.in
code/10_asterix_in_switzerland/src/: main.cpp
code/10_evolution/src/: a.out  main.cpp
code/10_golden_eye/src/: main.cpp
code/10_worldcup/src/: main.cpp
code/11_asterix_and_the_roman_legions/src/: main.cpp
code/11_idefix_and_the_mansions_of_the_gods/src/: main.cpp
code/11_return_of_the_jedi/src/: main.cpp
code/12_bonus_level/public/: test1.in  test1.out  test2.in  test2.out  test3.in  test3.out
code/12_bonus_level/src/: main.cpp
code/12_carsharing/src/: main.cpp
code/12_dean_thomas/src/: main.cpp
code/12_hong_kong/src/: main.cpp
code/12_on_her_majestys_secret_service/src/: main.cpp
code/13_clues/src/: main.cpp
code/13_ludo_bagman/public/: sample.in
code/13_ludo_bagman/src/: main.cpp
code/13_the_hands_tourney/src/: main.cpp
code/1_deck_of_cards/src/: main.cpp
code/1_dominoes/src/: main.cpp
code/1_even_matrices/src/: main.cpp
code/1_even_pairs/public/: test.in
code/1_even_pairs/src/: main.cpp
code/2_beach_bars/src/: main.cpp
code/2_burning_coins/src/: main.cpp
code/2_defensive_line/src/: main.cpp
code/2_the_great_game/src/: main.cpp
code/3_antenna/src/: main.cpp
code/3_first_hit/src/: main.cpp
code/3_from_russia_with_love/src/: main.cpp
code/3_hiking_maps/src/: main.cpp
code/3_hit/src/: main.cpp
code/4_ant_challenge/src/: main.cpp
code/4_buddy_selection/src/: main.cpp
code/4_example_programs/: bgl_intro_connected_components.cpp  bgl_intro_edmonds.cpp  bgl_intro_kruskal.cpp  bgl_intro_universal_slow.cpp
code/4_fighting_pits_of_meereen/src/: main.cpp
code/4_first_steps_with_bgl/src/: main.cpp
code/4_important_bridges/src/: main.cpp
code/5_boats/src/: main.cpp
code/5_moving_books/src/: main.cpp
code/6_LP_example_programs/: first_lp.cpp
code/6_casterly_rock/src/: main.cpp
code/6_diet/public/: sample.out
code/6_diet/src/: main.cpp
code/6_inball/src/: main.cpp
code/6_maximize_it/src/: main.cpp
code/7_coin_tossing_tournament/src/: main.cpp
code/7_knights/src/: main.cpp
code/7_london/src/: main.cpp
code/7_octopussy/src/: main.cpp
code/7_shopping_trip/src/: main.cpp
code/8_bistro/src/: main.cpp
code/8_germs/src/: main.cpp
code/8_h1n1/src/: main.cpp
code/8_light_the_stage/public/: test.in
code/8_light_the_stage/src/: main.cpp
code/9_algocoon_group/src/: main.cpp
code/9_canteen/src/: main.cpp
code/9_kingdom_defence/src/: main.cpp
code/9_placing_knights/src/: main.cpp
code/9_real_estate_market/src/: main.cpp
code_HS20/: CMakeLists.txt
code_HS20/1_build_the_sum/src/: main.cpp
code_HS20/1_even_matrices/src/: main.cpp
code_HS20/1_even_pairs/public/: test.out
code_HS20/1_even_pairs/src/: even-pairs-generator.cpp
