cmake_minimum_required(VERSION 3.19)
project(algolab)

set(CMAKE_CXX_STANDARD 14)

# Link to CGAL library
find_package(CGAL)
set(CGAL_DO_NOT_WARN_ABOUT_CMAKE_BUILD_TYPE TRUE)

# Link to Boost library
find_package(Boost)
include_directories(${Boost_INCLUDE_DIRS})

add_executable(0_basic_data_types 0_basic_data_types/src/main.cpp)
add_executable(0_bfs 0_bfs/src/main.cpp)
add_executable(0_dfs 0_dfs/src/main.cpp)
add_executable(0_hello_world 0_hello_world/src/main.cpp)
add_executable(0_maps 0_maps/src/main.cpp)
add_executable(0_sets 0_sets/src/main.cpp)
add_executable(0_sort 0_sort/src/main.cpp)
add_executable(0_strings 0_strings/src/main.cpp)
add_executable(0_sum_it 0_sum_it/src/main.cpp)
add_executable(0_vectors 0_vectors/src/main.cpp)
add_executable(1_build_the_sum 1_build_the_sum/src/main.cpp)
add_executable(1_dominoes 1_dominoes/src/main.cpp)
add_executable(1_even_matrices 1_even_matrices/src/main.cpp)
add_executable(1_even_pairs 1_even_pairs/src/main.cpp)
add_executable(1_even_pairs_generator 1_even_pairs/src/even-pairs-generator.cpp)
add_executable(2_deck_of_cards 2_deck_of_cards/src/main.cpp)
add_executable(2_beach_bars 2_beach_bars/src/main.cpp)
add_executable(2_burning_coins 2_burning_coins/src/main.cpp)
add_executable(2_defensive_line 2_defensive_line/src/main.cpp)
add_executable(2_the_great_game 2_the_great_game/src/main.cpp)
add_executable(3_from_russia_with_love 3_from_russia_with_love/src/main.cpp)
add_executable(3_antenna 3_antenna/src/main.cpp)
target_link_libraries(3_antenna CGAL::CGAL)
add_executable(3_first_hit 3_first_hit/src/main.cpp)
target_link_libraries(3_first_hit CGAL::CGAL)
add_executable(3_hiking_maps 3_hiking_maps/src/main.cpp)
target_link_libraries(3_hiking_maps CGAL::CGAL)
add_executable(3_hit 3_hit/src/main.cpp)
target_link_libraries(3_hit CGAL::CGAL)
add_executable(3_hello 3_example_programs/hello.cpp)
target_link_libraries(3_hello CGAL::CGAL)
add_executable(3_hello-exact 3_example_programs/hello-exact.cpp)
target_link_libraries(3_hello-exact CGAL::CGAL)
add_executable(3_intersect 3_example_programs/intersect.cpp)
target_link_libraries(3_intersect CGAL::CGAL)
add_executable(3_miniball 3_example_programs/miniball.cpp)
target_link_libraries(3_miniball CGAL::CGAL)
add_executable(3_two-kernels 3_example_programs/two-kernels.cpp)
target_link_libraries(3_two-kernels CGAL::CGAL)
add_executable(4_fighting_pits_of_meereen 4_fighting_pits_of_meereen/src/main.cpp)
add_executable(4_ant_challenge 4_ant_challenge/src/main.cpp)
target_link_libraries(4_ant_challenge ${Boost_LIBRARIES})
add_executable(4_buddy_selection 4_buddy_selection/src/main.cpp)
target_link_libraries(4_buddy_selection ${Boost_LIBRARIES})
add_executable(4_important_bridges 4_important_bridges/src/main.cpp)
target_link_libraries(4_important_bridges ${Boost_LIBRARIES})
add_executable(4_bgl_intro_connected_components 4_example_programs/bgl_intro_connected_components.cpp)
target_link_libraries(4_bgl_intro_connected_components ${Boost_LIBRARIES})
add_executable(4_bgl_intro_dijkstra 4_example_programs/bgl_intro_dijkstra.cpp)
target_link_libraries(4_bgl_intro_dijkstra ${Boost_LIBRARIES})
add_executable(4_bgl_intro_edmonds 4_example_programs/bgl_intro_edmonds.cpp)
target_link_libraries(4_bgl_intro_edmonds ${Boost_LIBRARIES})
add_executable(4_bgl_intro_init 4_example_programs/bgl_intro_init.cpp)
target_link_libraries(4_bgl_intro_init ${Boost_LIBRARIES})
add_executable(4_bgl_intro_kruskal 4_example_programs/bgl_intro_kruskal.cpp)
target_link_libraries(4_bgl_intro_kruskal ${Boost_LIBRARIES})
add_executable(4_bgl_intro_universal_fast 4_example_programs/bgl_intro_universal_fast.cpp)
target_link_libraries(4_bgl_intro_universal_fast ${Boost_LIBRARIES})
add_executable(4_bgl_intro_universal_slow 4_example_programs/bgl_intro_universal_slow.cpp)
target_link_libraries(4_bgl_intro_universal_slow ${Boost_LIBRARIES})
add_executable(4_first_steps_with_bgl 4_first_steps_with_bgl/src/main.cpp)
target_link_libraries(4_first_steps_with_bgl ${Boost_LIBRARIES})
add_executable(5_motorcycles 5_motorcycles/src/main.cpp)
target_link_libraries(5_motorcycles CGAL::CGAL)
add_executable(5_asterix_the_gaul 5_asterix_the_gaul/src/main.cpp)
add_executable(5_boats 5_boats/src/main.cpp)
add_executable(5_moving_books 5_moving_books/src/main.cpp)
add_executable(5_severus_snape 5_severus_snape/src/main.cpp)
add_executable(6_planet_express 6_planet_express/src/main.cpp)
target_link_libraries(6_planet_express ${Boost_LIBRARIES})
add_executable(6_casterly_rock 6_casterly_rock/src/main.cpp)
target_link_libraries(6_casterly_rock CGAL::CGAL)
add_executable(6_diet 6_diet/src/main.cpp)
target_link_libraries(6_diet CGAL::CGAL)
add_executable(6_inball 6_inball/src/main.cpp)
target_link_libraries(6_inball CGAL::CGAL)
add_executable(6_first_lp 6_LP_example_programs/first_lp.cpp)
target_link_libraries(6_first_lp CGAL::CGAL)
add_executable(6_linear_separation 6_LP_example_programs/linear_separation.cpp)
target_link_libraries(6_linear_separation CGAL::CGAL)
add_executable(6_maximize_it 6_maximize_it/src/main.cpp)
target_link_libraries(6_maximize_it CGAL::CGAL)
add_executable(7_octopussy 7_octopussy/src/main.cpp)
add_executable(7_bgl_push_relabel_max_flow 7_bgl_push_relabel_max_flow.cpp)
target_link_libraries(6_maximize_it ${Boost_LIBRARIES})
add_executable(7_coin_tossing_tournament 7_coin_tossing_tournament/src/main.cpp)
target_link_libraries(7_coin_tossing_tournament ${Boost_LIBRARIES})
add_executable(7_knights 7_knights/src/main.cpp)
target_link_libraries(7_knights ${Boost_LIBRARIES})
add_executable(7_london 7_london/src/main.cpp)
target_link_libraries(7_london ${Boost_LIBRARIES})
add_executable(7_shopping_trip 7_shopping_trip/src/main.cpp)
target_link_libraries(7_shopping_trip ${Boost_LIBRARIES})
add_executable(8_bistro 8_bistro/src/main.cpp)
target_link_libraries(8_bistro CGAL::CGAL)
add_executable(8_germs 8_germs/src/main.cpp)
target_link_libraries(8_germs CGAL::CGAL ${Boost_LIBRARIES})
add_executable(8_h1n1 8_h1n1/src/main.cpp)
target_link_libraries(8_h1n1 CGAL::CGAL)
add_executable(8_light_the_stage 8_light_the_stage/src/main.cpp)
target_link_libraries(8_light_the_stage CGAL::CGAL)
add_executable(8_delaunay 8_proximity_example_programs/delaunay.cpp)
target_link_libraries(8_delaunay CGAL::CGAL)
add_executable(8_emst 8_proximity_example_programs/emst.cpp)
target_link_libraries(8_emst CGAL::CGAL)
add_executable(8_suez 8_suez/src/main.cpp)
target_link_libraries(8_suez CGAL::CGAL)
add_executable(9_kingdom_defence 9_kingdom_defence/src/main.cpp)
target_link_libraries(9_kingdom_defence ${Boost_LIBRARIES})
add_executable(9_algocoon_group 9_algocoon_group/src/main.cpp)
target_link_libraries(9_algocoon_group ${Boost_LIBRARIES})
add_executable(9_canteen 9_canteen/src/main.cpp)
target_link_libraries(9_canteen ${Boost_LIBRARIES})
add_executable(9_bgl_mincostmaxflow 9_example/bgl_mincostmaxflow.cpp)
target_link_libraries(9_bgl_mincostmaxflow ${Boost_LIBRARIES})
add_executable(9_bgl_residual_bfs 9_example/bgl_residual_bfs.cpp)
target_link_libraries(9_bgl_residual_bfs ${Boost_LIBRARIES})
add_executable(9_placing_knights 9_placing_knights/src/main.cpp)
target_link_libraries(9_placing_knights ${Boost_LIBRARIES})
add_executable(9_real_estate_market 9_real_estate_market/src/main.cpp)
target_link_libraries(9_real_estate_market ${Boost_LIBRARIES})
add_executable(10_golden_eye 10_golden_eye/src/main.cpp)
target_link_libraries(10_golden_eye CGAL::CGAL)
add_executable(10_asterix_and_the_chariot_race 10_asterix_and_the_chariot_race/src/main.cpp)
add_executable(10_asterix_in_switzerland 10_asterix_in_switzerland/src/main.cpp)
add_executable(10_evolution 10_evolution/src/main.cpp)
add_executable(10_worldcup 10_worldcup/src/main.cpp)
target_link_libraries(10_worldcup ${Boost_LIBRARIES} CGAL::CGAL)
add_executable(11_asterix_and_the_roman_legions 11_asterix_and_the_roman_legions/src/main.cpp)
target_link_libraries(11_asterix_and_the_roman_legions CGAL::CGAL)
add_executable(11_idefix_and_the_mansions_of_the_gods 11_idefix_and_the_mansions_of_the_gods/src/main.cpp)
target_link_libraries(11_idefix_and_the_mansions_of_the_gods CGAL::CGAL ${Boost_LIBRARIES})
add_executable(12_bonus_level 12_bonus_level/src/main.cpp)
target_link_libraries(12_bonus_level CGAL::CGAL ${Boost_LIBRARIES})
add_executable(12_carsharing 12_carsharing/src/main.cpp)
target_link_libraries(12_carsharing CGAL::CGAL ${Boost_LIBRARIES})

