cmake_minimum_required(VERSION 3.19)
project(algolab)

set(CMAKE_CXX_STANDARD 14)

add_executable(1_build_the_sum 1_build_the_sum/src/main.cpp)
add_executable(1_deck_of_cards 1_deck_of_cards/src/main.cpp)
add_executable(1_dominoes 1_dominoes/src/main.cpp)
add_executable(1_even_matrices 1_even_matrices/src/main.cpp)
